--- a/public/manifest.json
+++ b/public/manifest.json
@@ -31,7 +31,7 @@
             "sizes": "512x512"
         }
     ],
-    "start_url": "https://faceclerkapp.herokuapp.com/",
+    "start_url": ".",
     "display": "standalone",
     "theme_color": "#ffffff",
     "background_color": "#ffffff"
